--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "liveServer.settings.port": 5502
+    "liveServer.settings.port": 5502,
+    "php.validate.enable": true,
+    "php.suggest.basic": true,
+    "php.validate.executablePath": "C:/php-8.2.5/php.exe"
 }
